added windows additional test and upgraded to kie, uberfire and dashbuilder versions